--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -1,66 +1,68 @@
+networks:
+  foodgram_network:
+    driver: bridge
+
 volumes:
-  pg_data:
-  backend_static:
-  backend_media:
-  frontend_build:
+  db_data:
+  static_volume:
+  media_volume:
+  frontend_volume:
 
 services:
   db:
-    image: postgres:13-alpine
+    image: postgres:13.0-alpine
     restart: always
-    env_file: ./.env
     volumes:
-      - pg_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - db_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    env_file:
+      - ./.env
+    networks:
+      - foodgram_network
+    container_name: foodgram_db
 
   backend:
-    image: pyryanova/foodgram_backend:latest
+    image: pyryanova/foodgram_backend
     restart: always
-    env_file: ./.env
-    depends_on:
-      db:
-        condition: service_healthy
     volumes:
       - backend_static:/static
       - backend_media:/media
-    command: >
-      bash -lc "
-        python manage.py migrate --noinput &&
-        python manage.py collectstatic --noinput &&
-        gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 60
-      "
-    expose:
-      - "8000"
+    env_file:
+      - ./.env
+    depends_on:
+      - db
+    networks:
+      - foodgram_network
+    container_name: foodgram_backend
 
   frontend:
-    image: pyryanova/foodgram_frontend:latest
-    restart: always
+    image: pyryanova/foodgram_frontend
     volumes:
-      - frontend_build:/app/build
-    command: sh -lc 'cp -r /opt/build/* /app/build/ 2>/dev/null || true; tail -f /dev/null'
+      - frontend_volume:/usr/share/nginx/html
+    command: >
+      sh -c "cp -r /usr/share/nginx/html/. /host && tail -f /dev/null"
+    networks:
+      - foodgram_network
+    container_name: foodgram_frontend
 
-  nginx:
-    image: nginx:1.25-alpine
-    restart: always
-    depends_on:
-      - backend
-      - frontend
+  gateway:
+    image: pyryanova/foodgram_gateway
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - frontend_build:/usr/share/nginx/html:rw
-      - backend_static:/var/html/static:ro
-      - backend_media:/var/html/media:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - /var/lib/letsencrypt:/var/lib/letsencrypt:ro
-    healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost/ >/dev/null || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt
+      - backend_static:/var/html/static
+      - backend_media:/var/html/media
+      - frontend_volume:/usr/share/nginx/html
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - foodgram_network
+    container_name: foodgram_gateway
+    restart: always
