--- a/infra/default.conf
+++ b/infra/default.conf
@@ -1,68 +1,39 @@
-networks:
-  foodgram_network:
-    driver: bridge
+server {
+    listen 80;
+    server_name _;
 
-volumes:
-  db_data:
-  static_volume:
-  media_volume:
-  frontend_volume:
+    root /usr/share/nginx/html;
+    index index.html;
 
-services:
-  db:
-    image: postgres:13.0-alpine
-    restart: always
-    volumes:
-      - db_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    env_file:
-      - ./.env
-    networks:
-      - foodgram_network
-    container_name: foodgram_db
+    location / {
+        try_files $uri /index.html;
+    }
 
-  backend:
-    image: pyryanova/foodgram_backend
-    restart: always
-    volumes:
-      - static_volume:/app/static
-      - media_volume:/app/media
-    env_file:
-      - ./.env
-    depends_on:
-      - db
-    networks:
-      - foodgram_network
-    container_name: foodgram_backend
+    location /static/ {
+        alias /app/static/;
+        access_log off;
+        expires 7d;
+    }
 
-  frontend:
-    image: pyryanova/foodgram_frontend
-    volumes:
-      - frontend_volume:/usr/share/nginx/html
-    command: >
-      sh -c "cp -r /usr/share/nginx/html/. /host && tail -f /dev/null"
-    networks:
-      - foodgram_network
-    container_name: foodgram_frontend
+    location /media/ {
+        alias /app/media/;
+        access_log off;
+        expires 7d;
+    }
 
-  gateway:
-    image: pyryanova/foodgram_gateway
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/letsencrypt
-      - static_volume:/app/static
-      - media_volume:/app/media
-      - frontend_volume:/usr/share/nginx/html
-    depends_on:
-      - backend
-      - frontend
-    networks:
-      - foodgram_network
-    container_name: foodgram_gateway
-    restart: always
+    location /api/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        client_max_body_size 25m;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        client_max_body_size 25m;
+    }
+}
