--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx:/etc/nginx/conf.d:ro
       - /etc/letsencrypt:/etc/letsencrypt
       - static_volume:/app/static
       - media_volume:/app/media
