--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 networks:
   foodgram_network:
     driver: bridge
@@ -41,12 +43,13 @@ services:
     container_name: foodgram_backend
 
   frontend:
-    image: pyryanova/foodgram_frontend
-    platform: linux/amd64
+    image: node:20-alpine
+    working_dir: /app
     volumes:
+      - ../frontend:/app:ro
       - front_build:/dist
     command: >
-      sh -c "npm ci && npm run build && cp -r /app/build/* /dist"
+      sh -c "npm ci && npm run build && mkdir -p /dist && cp -r /app/build/* /dist"
     networks:
       - foodgram_network
     container_name: foodgram_frontend
@@ -60,7 +63,7 @@ services:
       - "443:443"
     volumes:
       - front_build:/usr/share/nginx/html
-      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt
       - static_volume:/var/html/static
       - media_volume:/var/html/media
